--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -25,17 +25,17 @@
     "src"
   ],
   "scripts": {
-    "build": "npm-run-all setVersion clean build:compile bundle",
+    "build": "npm-run-all setVersion clean build:compile build:bundle",
+    "build:bundle": "npm-run-all copy:loader copy:wc sass rollup",
     "build:compile": "npm-run-all sass compile",
     "build:watch": "npm-run-all -p sass:watch compile:watch",
     "clean": "shx rm -rf ./dist && shx rm -rf ./tsconfig.tsbuildinfo",
     "compile": "tsc -b",
     "compile:watch": "tsc -w",
-    "bundle": "npm-run-all copy:loader copy:wc sass rollup",
     "copy:loader": "cpx src/bundle/mgt-loader.js dist/bundle",
     "copy:wc": "cpx ../../node_modules/@webcomponents/webcomponentsjs/bundles/**/* dist/bundle/wc/bundles && cpx ../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js dist/bundle/wc",
     "lint": "tslint -c ../../tslint.json 'src/**/*.ts'",
-    "prepack": "shx rm -rf *.tgz && npm-run-all build bundle",
+    "prepack": "shx rm -rf *.tgz && npm-run-all build",
     "postpack": "cpx *.tgz ../../artifacts",
     "rollup": "rollup -c",
     "sass": "gulp sass",
