--- a/packages/mgt/tsconfig.json
+++ b/packages/mgt/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../tsconfig.base.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist/es6",
     "rootDir": "src",
