--- a/package.json
+++ b/package.json
@@ -59,10 +59,14 @@
     "@babel/preset-typescript": "^7.9.0",
     "@types/jest": "^24.9.1",
     "@types/node": "12.12.22",
+    "@webcomponents/webcomponentsjs": "^2.4.3",
     "babel-loader": "^8.1.0",
     "core-js": "^3.6.4",
     "es-dev-server": "^1.45.3",
     "husky": "^3.1.0",
+    "jest": "^24.5.0",
+    "jest-junit": "^6.3.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "1.17.0",
     "regenerator-runtime": "^0.13.5",
     "sass": "^1.26.3",
