--- a/.github/workflows/push-release.yml
+++ b/.github/workflows/push-release.yml
@@ -8,9 +8,38 @@ on:
     branches: [release/latest, nmetulev/storybook-next]
 
 jobs:
-  release:
+  version:
     runs-on: ubuntu-latest
 
+    outputs:
+      latest-version: ${{steps.latest-version.outputs.version}}
+      package-version: ${{steps.package-version.outputs.current-version}}
+
+    strategy:
+      matrix:
+        node-version: [12.x]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Get latest version from npm
+        id: latest-version
+        run: echo ::set-output name=version::$(npm show @microsoft/mgt version)
+
+      - name: Get current package version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@master
+
+  release:
+    runs-on: ubuntu-latest
+    needs: version
+    if: needs.version.outputs.latest-version != needs.version.outputs.package-version
     strategy:
       matrix:
         node-version: [12.x]
@@ -36,7 +65,6 @@ jobs:
         uses: martinbeentjes/npm-get-version-action@master
 
       - name: Build 🛠
-        if: steps.latest-version.outputs.version != steps.package-version.outputs.current-version
         run: |
           npm install -g yarn lerna
           yarn
@@ -44,17 +72,14 @@ jobs:
 
       # commenting out for now until we can properly test this during a release
       # - name: Update package version
-      #   if: steps.latest-version.outputs.version != steps.package-version.outputs.current-version
       #   run: node scripts/setVersion.js
 
       # - name: Publish npm packages
-      #   if: steps.latest-version.outputs.version != steps.package-version.outputs.current-version
       #   run: lerna exec --scope @microsoft/* -- "npm publish --access=public"
       #   env:
       #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       # - name: Upload a Build Artifact - mgt-spfx Solution
-      #   if: steps.latest-version.outputs.version != steps.package-version.outputs.current-version
       #   uses: actions/upload-artifact@v2
       #   with:
       #     name: mgt-spfx solution
