--- a/samples/sp-webpart/package.json
+++ b/samples/sp-webpart/package.json
@@ -16,7 +16,6 @@
     "@microsoft/sp-office-ui-fabric-core": "1.12.1",
     "@microsoft/sp-property-pane": "1.12.1",
     "@microsoft/sp-webpart-base": "1.12.1",
-    "@webcomponents/webcomponentsjs": "^2.4.3",
     "office-ui-fabric-react": "7.156.0",
     "react": "16.9.0",
     "react-dom": "16.9.0"
@@ -25,22 +24,15 @@
     "@types/react": "16.9.36"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.3",
-    "@babel/preset-env": "^7.10.3",
-    "@microsoft/rush-stack-compiler-3.7": "0.2.9",
-    "@microsoft/sp-build-web": "1.12.1",
-    "@microsoft/sp-module-interfaces": "1.12.1",
-    "@microsoft/sp-tslint-rules": "1.12.1",
-    "@microsoft/sp-webpart-workbench": "1.12.1",
-    "@types/es6-promise": "0.0.33",
     "@types/react": "16.9.36",
     "@types/react-dom": "16.9.8",
-    "@types/webpack-env": "1.13.1",
-    "ajv": "~5.2.2",
-    "babel-loader": "^8.1.0",
+    "@microsoft/sp-build-web": "1.12.1",
+    "@microsoft/sp-tslint-rules": "1.12.1",
+    "@microsoft/sp-module-interfaces": "1.12.1",
+    "@microsoft/sp-webpart-workbench": "1.12.1",
+    "@microsoft/rush-stack-compiler-3.7": "0.2.9",
     "gulp": "4.0.2",
-    "regenerator-runtime": "^0.13.5",
-    "typescript": "^3.4.3",
-    "webpack": "^4.43.0"
+    "ajv": "~5.2.2",
+    "@types/webpack-env": "1.13.1"
   }
 }
