--- a/packages/providers/mgt-teams-sso-provider/package.json
+++ b/packages/providers/mgt-teams-sso-provider/package.json
@@ -44,7 +44,8 @@
   "dependencies": {
     "@microsoft/mgt-element": "*",
     "@microsoft/mgt-msal2-provider": "*",
-    "@microsoft/microsoft-graph-client": "^2.2.1"
+    "@microsoft/microsoft-graph-client": "^2.2.1",
+    "@azure/msal-browser": "^2.14.2"
   },
   "publishConfig": {
     "directory": "dist"
