--- a/samples/teams-sso-node/package.json
+++ b/samples/teams-sso-node/package.json
@@ -5,22 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cpx \"../../packages/mgt/dist/bundle/**\" \"./client/mgt\" && nodemon server.ts",
-    "build": "tsc --project ./"
+    "start": "nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@azure/msal-node": "^1.0.0-alpha.14",
-    "cpx": "^1.5.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.11.0",
     "jwt-decode": "^3.1.2",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
